* Added readonly field type (displays a label and static text) and readonly property (sets the readonly property of the html element). Examples in readme. * Changed ids on the checkout form. The inputs will now have id = to the one set. The wrapping div will have an id like id_div. * Fixing up dependencies.

--- a/css/pmprorh_frontend.css
+++ b/css/pmprorh_frontend.css
@@ -1,1 +1,2 @@
 form.pmpro_form label.pmprorh_radio_label {float: none; font-weight: normal; cursor: pointer;}
+form.pmpro_form input[readonly], form.pmpro_form select[readonly], form.pmpro_form textarea[readonly] {opacity:0.5; filter:alpha(opacity=50);}
